force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Repository__c/fields/sf_devops__Default_Branch__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Default_Branch__c</fullName>
    <description>The name of the default branch in this repository.</description>
    <label>Default Branch</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>