force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Repository__c/fields/sf_devops__Last_Event__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Last_Event__c</fullName>
    <description>This stores a unique identifier for the last event that we received from the external VCS for this Repository.</description>
    <label>Last Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>