force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Repository__c/fields/sf_devops__Polling_Interval__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Polling_Interval__c</fullName>
    <description>This stores the suggested polling interval for asking the external VCS for this Repository&apos;s events, in seconds.</description>
    <label>Polling Interval</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>