force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Repository__c/fields/sf_devops__Provider__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Provider__c</fullName>
    <defaultValue>&apos;GitHub&apos;</defaultValue>
    <description>The version control system provider that hosts this project.</description>
    <label>Provider</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bitbucket</fullName>
            </value>
            <value>
                <fullName>GitHub</fullName>
            </value>
            <value>
                <fullName>GitLab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>