force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Repository__c/validationRules/sf_devops__GitHub_Properties.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__GitHub_Properties</fullName>
    <active>true</active>
    <description>Enforces that Owner and Repo are only set for GitHub repositories.</description>
    <errorConditionFormula>AND(
  ISNEW(),
   NOT(ISPICKVAL( sf_devops__Provider__c , &quot;GitHub&quot;)),
  NOT(AND (
    ISBLANK( sf_devops__GitHub_Owner__c),
    ISBLANK( sf_devops__GitHub_Repo__c)
  ))
)</errorConditionFormula>
    <errorMessage>GitHub_Repo and GitHub_Owner can only be set for GitHub repositories.</errorMessage>
</ValidationRule>