force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Repository__c/validationRules/sf_devops__No_Property_Changes.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__No_Property_Changes</fullName>
    <active>true</active>
    <description>Enforces that certain fields cannot be changed.</description>
    <errorConditionFormula>AND(
  OR (
    ISCHANGED( sf_devops__Provider__c ) ,
    ISCHANGED(  sf_devops__GitHub_Owner__c  ) ,
    ISCHANGED(  sf_devops__GitHub_Repo__c  ) 
  )
)</errorConditionFormula>
    <errorMessage>This field cannot be modified.</errorMessage>
</ValidationRule>