force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Repository__c/validationRules/sf_devops__Require_GitHub_Properties.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Require_GitHub_Properties</fullName>
    <active>true</active>
    <description>Enforces that Owner and Repo are set for GitHub repositories.</description>
    <errorConditionFormula>AND(
  ISNEW(),
   ISPICKVAL( sf_devops__Provider__c , &quot;GitHub&quot;),
  OR (
    ISBLANK( sf_devops__GitHub_Owner__c),
    ISBLANK( sf_devops__GitHub_Repo__c)
  )
)</errorConditionFormula>
    <errorMessage>Repo and Owner are required for GitHub repositories.</errorMessage>
</ValidationRule>